--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="buttons"></div>
   <div id="player">
     <iframe id="ytplayer" type="text/html" width="100%" height="100%"
-      src="https://www.youtube.com/embed/axnVIBb_FyU?start=60&end=120&enablejsapi=1&rel=0&modestbranding=1"
+      src="https://www.youtube.com/embed/Ey2zaaToKls?start=60&end=120&enablejsapi=1&rel=0&modestbranding=1"
       frameborder="0" allow="autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
     </iframe>
   </div>
@@ -25,9 +25,9 @@
   <script>
     // Define your video segments
     const segments = [
-      { videoId: 'axnVIBb_FyU', start: 60, end: 120, label: 'Segment 1 (1:00–2:00)' },
-      { videoId: 'axnVIBb_FyU', start: 180, end: 240, label: 'Segment 2 (3:00–4:00)' },
-      { videoId: 'axnVIBb_FyU', start: 600, end: 660, label: 'Segment 3 (10:00–11:00)' }
+      { videoId: 'Ey2zaaToKls', start: 60, end: 120, label: 'Segment 1 (1:00–2:00)' },
+      { videoId: 'Ey2zaaToKls', start: 185, end: 240, label: 'Segment 2 (3:05–4:00)' },
+      { videoId: 'Ey2zaaToKls', start: 600, end: 660, label: 'Segment 3 (10:00–11:00)' }
     ];
 
     const buttonsDiv = document.getElementById('buttons');
